RESOLVED FIXED92314
[BlackBerry] GraphicsContext3D::paintToCanvas should not swap 0th and 2nd components of color
https://bugs.webkit.org/show_bug.cgi?id=92314
Summary [BlackBerry] GraphicsContext3D::paintToCanvas should not swap 0th and 2nd com...
Joshua Netterfield
Reported 2012-07-25 16:08:52 PDT
paintToCanvas already receives BGRA data. It shouldn't convert it back to RGBA.
Attachments
Patch (5.05 KB, patch)
2012-07-25 17:14 PDT, Joshua Netterfield
no flags
Joshua Netterfield
Comment 1 2012-07-25 17:14:51 PDT
Rob Buis
Comment 2 2012-07-25 19:29:43 PDT
Comment on attachment 154497 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2012-07-25 19:53:05 PDT
Comment on attachment 154497 [details] Patch Clearing flags on attachment: 154497 Committed r123702: <http://trac.webkit.org/changeset/123702>
WebKit Review Bot
Comment 4 2012-07-25 19:53:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.