[BlackBerry] GraphicsContext3D::paintToCanvas should not swap 0th and 2nd components of color https://bugs.webkit.org/show_bug.cgi?id=92314

Patch by Joshua Netterfield <jnetterfield@rim.com> on 2012-07-25
Reviewed by Rob Buis.

No new tests, because it corrects existing functionality, but it makes BlackBerry
pass canvas-text.html and others.

* platform/graphics/GraphicsContext3D.h:
* platform/graphics/blackberry/GraphicsContext3DBlackBerry.cpp:
(WebCore::GraphicsContext3D::paintToCanvas):
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::paintRenderingResultsToCanvas):

Canonical link: https://commits.webkit.org/110139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123702 268f45cc-cd09-0410-ab3c-d52691b4dbfc